# PFAS-Interfacial-Package

./: .gitignore  LICENSE  README.md  build_unified_pfas_ki.py  fix.inp  pyproject.toml  run_pfas_interface_knf.py  slab.mol  slab.xyz
docs/repo_report/: pfas_repo_report.tex
docs/repo_report/figures/: descriptor_pipeline.mmd  git_history.mmd  module_architecture.mmd  run_directory_layout.mmd  workflow_overview.mmd
pfas_interface_cli/: __init__.py  analysis.py  cli.py  geometry.py  interactive.py  knf.py  placement.py  reporting.py  slab_builder.py  workflow.py  xtb.py
references/: master_slab_xtbopt.mol  master_slab_xtbopt.xyz  master_slab_xtbtopo.mol
tools/: QSAR.py  build_unified_pfas_ki.py  merge_pfas_slab.py  sort_by_z_xyz.py
